@@ -13,7 +13,8 @@
                   - Allocation number and bandwidth quota;
                   - Address / port restrictions;
                   - Reconstruct fragmented TCP messages support;
-                  - Prevent allocation hijacking support.
+                  - Prevent allocation hijacking support;
+                  - Add logs support via syslog.
 
 2008-11-22  Sebastien Vincent <vincent@lsiit.u-strasbg.fr>
 
